# unbrowse

./: .env.example  .gitignore  .npmignore  .release-notes.md  .zigrep_archive  AGENTS.md  AGENT_PROMPT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  PLAN.md  PROTOCOL.md  README.md  SECURITY.md  SKILL.md  biome.json  clawdbot.plugin.json  getfoundry-unbrowse-openclaw-0.5.1.tgz  index.ts  install.sh  llms-txt-generator.yaml  openclaw.plugin.json  package.json  setup  src  test-harness.ts  tsconfig.json  unbrowse-1.1.0.tgz  unbrowse-1.1.2.tgz  unbrowse-1.1.5.tgz  unbrowse-2.0.2.tgz  unbrowse-2.0.5.tgz  unbrowse-2.8.1.tgz  unbrowse-2.8.2.tgz  unbrowse-2.8.3.tgz  unbrowse-2.8.4.tgz  unbrowse-2.8.5.tgz  unbrowse-2.8.6.tgz  (+1 more)
.github/: release-template.md
agents/: openai.yaml
benchmarks/: README.md  run.ts
docs/: 2026-03-31-orchestrator-analysis.md  2026-03-31-yq-contributions.md  2026-04-04-backend-regression-issues.md  AGENTIC_WEB.md  ARCHITECTURE.md  CONTRIBUTOR_PLAYBOOK.md  INTEGRATION_BOUNDARIES.md  LLM_DEV_GUIDE.md  POSITIONING.md  PURPOSE.md  QUICKSTART.md  README.md  RELEASE_COMMUNICATION.md  RELEASING.md  agent-memory.md  analytics-api.md  api-reference.md  api.md  architecture.md  (+7 more)
native/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
native/src/: lib.rs  types.rs
native/src/auth/: credentials.rs  extractor.rs  mod.rs  vault.rs
native/src/browser/: capture.rs  control.rs  cookies.rs  mod.rs  tester.rs
native/src/marketplace/: client.rs  mod.rs  wallet.rs
native/src/parser/: filters.rs  har.rs  mod.rs
native/src/skill/: generator.rs  mod.rs  sanitizer.rs
native/src/workflow/: executor.rs  learner.rs  mod.rs  recorder.rs
(+295 files in other folders)
