[package]
name = "unbrowse-native"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
regex = "1"
once_cell = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
